[package]
name = "waker-fn"
version = "1.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Convert closures into wakers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/waker-fn"
homepage = "https://github.com/smol-rs/waker-fn"
documentation = "https://docs.rs/waker-fn"
keywords = ["async", "waker", "wake", "closure", "callback"]
categories = ["concurrency"]
readme = "README.md"
